fix extra padding

--- a/css/jquery.idealforms.css
+++ b/css/jquery.idealforms.css
@@ -13,7 +13,7 @@ textarea{overflow:auto;vertical-align:top;}
 .no-user-select{-webkit-touch-callout:none;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;}
 .ie-refresh{content:".";line-height:0;text-indent:-9999px;}
 .ui-input{font-family:sans-serif;height:33px;line-height:33px;padding:0 .8em;}
-.ideal-field-width{width:499px;}
+.ideal-field-width{width:476.5px;}
 .ideal-form{font-size:15px;font-family:sans-serif;line-height:1.5;background:#ffffff;}.ideal-form *{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box;outline:0;border-radius:0 \9 !important;}
 .ideal-form:before,.ideal-form:after{content:"";display:table;}
 .ideal-form:after{clear:both;}
@@ -62,7 +62,7 @@ textarea{overflow:auto;vertical-align:top;}
 .ideal-select.list.open .title,.ideal-select.list .title{border-radius:3px 3px 0 0;}.ideal-select.list.open .title:after,.ideal-select.list .title:after{content:".";line-height:0;text-indent:-9999px;border:0;}
 .ideal-select.list .sub{min-width:auto \9;width:100% \9;position:relative;}
 .ideal-form.stack .ideal-select.list{width:100%;}
-.ideal-radiocheck{min-width:225px;max-width:499px;position:relative;padding:1.6em 0;font-size:85%;color:#444444;border-radius:3px;border:1px solid #bbbbbb;background-color:#ffffff;background-repeat:no-repeat;background-image:-webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#ffffff));background-image:-webkit-linear-gradient(#ffffff, #ffffff);background-image:-moz-linear-gradient(#ffffff, #ffffff);background-image:-o-linear-gradient(top, #ffffff, #ffffff);filter:progid:DXImageTransform.Microsoft.Gradient(StartColorStr='#ffffff', EndColorStr='#ffffff', GradientType=0);-ms-filter:"progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff', EndColorStr='#ffffff', GradientType=0))";}.ideal-radiocheck label,.ideal-radiocheck input{cursor:pointer;}
+.ideal-radiocheck{min-width:225px;max-width:476.5px;position:relative;padding:1.6em 0;font-size:85%;color:#444444;border-radius:3px;border:1px solid #bbbbbb;background-color:#ffffff;background-repeat:no-repeat;background-image:-webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#ffffff));background-image:-webkit-linear-gradient(#ffffff, #ffffff);background-image:-moz-linear-gradient(#ffffff, #ffffff);background-image:-o-linear-gradient(top, #ffffff, #ffffff);filter:progid:DXImageTransform.Microsoft.Gradient(StartColorStr='#ffffff', EndColorStr='#ffffff', GradientType=0);-ms-filter:"progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff', EndColorStr='#ffffff', GradientType=0))";}.ideal-radiocheck label,.ideal-radiocheck input{cursor:pointer;}
 .ideal-radiocheck label{-webkit-transition:background .15s ease-in-out, color .15s ease-in-out, border .15s ease-in-out;-moz-transition:background .15s ease-in-out, color .15s ease-in-out, border .15s ease-in-out;-ms-transition:background .15s ease-in-out, color .15s ease-in-out, border .15s ease-in-out;-o-transition:background .15s ease-in-out, color .15s ease-in-out, border .15s ease-in-out;display:block;position:relative;margin:0 1em;padding:.4em .8em;padding-left:34px;border:1px solid transparent;border-radius:3px;text-indent:-17px;}
 .ideal-check,.ideal-radio{-webkit-touch-callout:none;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;display:inline-block;position:relative;left:-8.5px;background:url("../img/radiocheck.png") left top no-repeat;width:17px;height:17px;vertical-align:text-bottom;}
 .ideal-radio{background-position:left bottom;}
