--- a/less/form.less
+++ b/less/form.less
@@ -8,7 +8,7 @@
 /*------------------------------------------------------ */
 
   /* jQuery data */
-  @ideal-field-width: @input-width + @error-width + @icon-size + (@icon-padding*2) + @arrow-size + (@heading-padding*2);
+  @ideal-field-width: @input-width + @error-width + @icon-size + (@icon-padding*2) + @arrow-size + @heading-padding;
   .ideal-field-width {
     width: @ideal-field-width;
   }
